Laravel/laravel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web1-laravel
spec:
  replicas: 1
  selector:
    matchLabels:
      name: web1-laravel
  template:
    metadata:
      labels:
        name: web1-laravel
    spec:
      containers:
      - name: web1-laravel
        image: raxer/laravel

---
apiVersion: v1
kind: Service
metadata:
  name: web1-laravel
spec:
  type: NodePort
  ports:
    - targetPort: 8080
      port: 8080
      nodePort: 30088
  selector:
    name: web1-laravel
